--- a/domManipulationAndEvents/index.html
+++ b/domManipulationAndEvents/index.html
@@ -8,5 +8,6 @@
     <body>
         <h1>Title</h1>
         <div id="container"></div>
+        <button id="btn">Click Me</button>
     </body>
 </html>
