--- a/domManipulationAndEvents/assignment/index.html
+++ b/domManipulationAndEvents/assignment/index.html
@@ -11,9 +11,27 @@
         <p>Here we will add a link to the <a href="https://www.mozilla.org/">Mozilla homepage</a></p>
       </section>
       <script>
+        //mdn - doing some basic dom manipulation
         const link = document.querySelector("a");
         link.textContent = "Mozilla Developer Network";
         link.href = "https://developer.mozilla.org";
+        
+        //mdn - creating and placing new nodes
+        const sect = document.querySelector("section");
+        const para = document.createElement("p");
+        para.textContent = "We hope you enjoyed the ride.";
+        sect.appendChild(para);
+        const text = document.createTextNode(
+          " — the premier source for web development knowledge.",
+        );
+        const linkPara = document.querySelector("p");
+        linkPara.appendChild(text);
+
+        //mdn - moving and removing elements
+        sect.appendChild(linkPara);
+        sect.removeChild(linkPara);
+        linkPara.remove();
+        linkPara.parentNode.removeChild(linkPara);
       </script>
   </body>
 </html>
