--- a/domManipulationAndEvents/assignment/index.html
+++ b/domManipulationAndEvents/assignment/index.html
@@ -4,6 +4,16 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simple DOM example</title>
+
+    <style>
+      .highlight {
+        color: white;
+        background-color: black;
+        padding: 10px;
+        width: 250px;
+        text-align: center;
+      }
+    </style>
   </head>
   <body>
       <section>
@@ -32,6 +42,8 @@
         sect.removeChild(linkPara);
         linkPara.remove();
         linkPara.parentNode.removeChild(linkPara);
+
+        para.classList.add("highlight");
       </script>
   </body>
 </html>
