Added basic look to match the assignment look

--- a/domManipulationAndEvents/assignment/dynamicShoppingList/index.html
+++ b/domManipulationAndEvents/assignment/dynamicShoppingList/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>MDN - Dynamic Shopping List</title>
 </head>
 <body>
-    
+    <h1>My shopping list</h1>
+    <div id="inputarea">
+        Enter a new item: <input> <button>Add Item</button>
+    </div>
 </body>
 </html>
