--- a/domManipulationAndEvents/assignment/dynamicShoppingList/index.html
+++ b/domManipulationAndEvents/assignment/dynamicShoppingList/index.html
@@ -1,14 +1,37 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
+<html lang="en-US">
+  <head>
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MDN - Dynamic Shopping List</title>
-</head>
-<body>
+    <title>Shopping list example</title>
+    <style>
+      li {
+        margin-bottom: 10px;
+      }
+
+      li button {
+        font-size: 12px;
+        margin-left: 20px;
+        color: #666;
+      }
+    </style>
+  </head>
+  <body>
+
     <h1>My shopping list</h1>
-    <div id="inputarea">
-        Enter a new item: <input> <button>Add Item</button>
-    </div>
-</body>
+
+    <form>
+      <label for="item">Enter a new item:</label>
+      <input type="text" name="item" id="item">
+      <button>Add item</button>
+    </form>
+
+    <ul>
+
+    </ul>
+
+    <script>
+
+    </script>
+  </body>
 </html>
