--- a/domManipulationAndEvents/assignment/dynamicShoppingList/index.html
+++ b/domManipulationAndEvents/assignment/dynamicShoppingList/index.html
@@ -31,6 +31,12 @@
     </ul>
 
     <script>
+        //2.
+        const list = document.querySelector("ul");
+        const input = document.querySelector("input");
+        const btn = document.querySelector("button");
+
+        //3.
 
     </script>
   </body>
